Fix issue where buttons in the palette do not wrap when viewport becomes horizontally narrow

--- a/styles.css
+++ b/styles.css
@@ -61,14 +61,13 @@ button {
 
 .palette {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     margin: 30px auto;
     border: 5px solid;
     /* max-width: 80vw; */
     /* height: 120px; */
-    width: 500px;
-    height: 140px;
     border-radius: 7px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
@@ -82,7 +81,8 @@ button {
 
 .palette div {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     align-items: center;
     gap: 30px;
 }
@@ -90,6 +90,7 @@ button {
 .palette button {
     padding: 15px 25px;
     height: 60px;
+    margin: 20px;
 }
 
 .palette button:first-child {
